src2/objects/Default_Modem_Profile_Detail__c.object
<CustomObject>
    <description>Parameter/Event Container for a Default Modem Profile Header</description>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Access</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Modem_Profile__c</fullName>
        <label>Default Modem Profile</label>
        <referenceTo>Default_Modem_Profile__c</referenceTo>
        <relationshipLabel>Default Modem Profile Details</relationshipLabel>
        <relationshipName>Default_Modem_Profile_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Specifies what Event Type belongs Every Event according Machine Team: 
Event Name	Event Type 
Event Event	0 
Brew History Event	1 
Pump Maintenance Event	2 
BU Maintenance event	3 
Error Event	4 
Warning Event	5 
Configuration Change Event	6 
Time Change Event	7 
Clean Milk Event	9 
Descaling Event	10 
Filter Change Event	11 
Rinse Coffee Event	12 
Rinse Milk Event	13 
Emptying Event	14</description>
        <label>Event Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>FieldType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_DataType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modem_Behaviour__c</fullName>
        <description>Field that defines how a Modem Setting needs to be sent to Machine</description>
        <label>Modem Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Modem_Behaviour</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parameter_ID__c</fullName>
        <label>Parameter ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter_Name__c</fullName>
        <label>Parameter Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <label>Picklist Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ignore</fullName>
                </value>
                <value>
                    <fullName>Send on Schedule</fullName>
                </value>
                <value>
                    <fullName>Send Immediately</fullName>
                </value>
                <value>
                    <fullName>1 - Always On</fullName>
                </value>
                <value>
                    <fullName>2 - At every boot, at least once a day and on SMS start</fullName>
                </value>
                <value>
                    <fullName>3 - At every boot and on SMS start</fullName>
                </value>
                <value>
                    <fullName>4 - Only on SMS start</fullName>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
                <value>
                    <fullName>Not used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setting_Type__c</fullName>
        <label>Setting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Setting Configuration</fullName>
                </value>
                <value>
                    <fullName>Event Configuration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Default Modem Profile Detail</label>
    <nameField>
        <displayFormat>DMP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Modem Profile Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>